--- a/SudokuChecker/Checker.csproj
+++ b/SudokuChecker/Checker.csproj
@@ -35,6 +35,10 @@
   </PropertyGroup>
   <ItemGroup>
     <!-- A reference to the entire .NET Framework is automatically included -->
+    <ProjectReference Include="..\Solver\Solver.csproj">
+      <Project>{71911f96-302a-4111-8fae-ad344644c51a}</Project>
+      <Name>Solver</Name>
+    </ProjectReference>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Checker.cs" />
